@@ -63,9 +63,10 @@ abstract class Capabilities
 	 * @param array  $data   Data to print.
 	 * @param array  $params Additional request parameters
 	 * @param bool   $xml    True: Print as XML False: Print as JSON.
+	 * @param int    $offset How much releases to skip
 	 * @param string $type   What type of API query to format if XML
 	 */
-	public function output($data, $params, $xml = true, $type = '')
+	public function output($data, $params, $xml = true, $offset, $type = '')
 	{
 		$this->type = $type;
 
@@ -73,6 +74,7 @@ abstract class Capabilities
 			'Parameters' => $params,
 			'Data'       => $data,
 			'Server'     => $this->getForMenu(),
+			'Offset'     => $offset,
 			'Type'       => $type
 		];
 
