@@ -9,6 +9,7 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 2016-09-16 DariusIII
+	Chg: Add back reporting of total rows to API response
 	Chg: Group audio releases by album (fixes issue #2239)
 2016-09-14 DariusIII
 	Chg: Add TinyMCE editor support to forum and admin->content
